# wxl-cold-converter

./: .gitignore  App.xaml  App.xaml.cs  LogWindow.xaml  LogWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  WxlConverterUi.csproj
.github/scripts/: sync-shared-sources.ps1
.github/workflows/: build.yml  release.yml
Models/: AdtOptions.cs  AppSettings.cs  M2Options.cs  PathCap.cs  WmoOptions.cs
Services/: ConverterEngine.cs  NativeInterop.cs  SettingsStore.cs
converter/: CMakeLists.txt  build.ps1
converter/src/api/: Api.cpp  Api.hpp  Callbacks.cpp  Callbacks.hpp
converter/src/cli/: FileType.cpp  FileType.hpp  Progress.cpp  Progress.hpp  Runner.cpp  Runner.hpp  Settings.hpp
converter/src/common/: WxlTag.hpp
converter/src/core/: Cancel.cpp  Cancel.hpp  Listfile.cpp  Listfile.hpp  Logger.cpp  Logger.hpp  ModuleDirectory.cpp  ModuleDirectory.hpp
converter/src/models/adt/: AdtMerge.cpp  AdtMerge.hpp  Convert.cpp  Convert.hpp
converter/src/models/m2/: Convert.cpp  Convert.hpp  Downport.cpp  Downport.hpp  Md21.cpp  Skel.cpp  Skel.hpp
converter/src/models/wmo/: Convert.cpp  Convert.hpp  WmoTranslate.cpp  WmoTranslate.hpp
converter/src/structure/m2/: M2Format.hpp
converter/src/textures/blp/: Convert.cpp  Convert.hpp
